Fix padding for titles on smaller devices

--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -45,7 +45,7 @@
 
     @media (max-width: $breakpoint-sm) {
       font-size: $font-size-xl;
-      padding-top: $spacing-xxl;
+      padding-top: $spacing-md;
     }
   }
 
